--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,9 @@
 body {
-    font-family: "Open Sans Condensed", cursive;
+  font-family: "Open Sans Condensed", cursive;
+  padding: 20px 60px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
