--- a/src/components/custom-button/custom-button.scss
+++ b/src/components/custom-button/custom-button.scss
@@ -19,4 +19,14 @@
     color: #000;
     border: 1px solid #000;
   }
+
+  &.google-sign-in {
+    background-color: #4285f4;
+    color: white;
+
+    &:hover {
+      background-color: #357ae8;
+      border: none;
+    }
+  }
 }
